# racing_coach

./: .gitignore  CLAUDE.md  PROJECT_ANALYSIS.md  README.md  SPRINT_PLAN.md  brainstorm.md  pyproject.toml
scripts/: analyze_session.py  check_acc.py  hotpath.py  record_session.py  sprint7.py
src/racing_coach/: __init__.py
src/racing_coach/analysis/: __init__.py  apex_speed.py  braking.py  delta.py  models.py  reference.py  throttle.py
src/racing_coach/hotpath/: __init__.py  audio.py  engine.py  event_stream.py  rules.py
src/racing_coach/overlay/: __init__.py  renderer.py  window.py
src/racing_coach/reporting/: __init__.py  aggregator.py  formatter.py  llm_client.py  models.py  prompt.py
src/racing_coach/telemetry/: __init__.py  acc_parser.py  acc_reader.py  connection.py  ibt_reader.py  models.py  parser.py  storage.py
src/racing_coach/track/: __init__.py  centerline.py  detector.py  models.py
src/racing_coach/tts/: __init__.py  commentary.py  engine.py
src/racing_coach/web/: app.py  schemas.py  service.py
src/racing_coach/web/static/: style.css
src/racing_coach/web/templates/: base.html  progress.html  report.html
tests/: test_smoke.py
tests/analysis/: test_apex_speed.py  test_braking.py  test_delta.py  test_reference.py  test_throttle.py
tests/hotpath/: test_audio.py  test_engine.py  test_event_stream.py  test_rules.py
tests/overlay/: test_renderer.py
tests/reporting/: test_aggregator.py  test_formatter.py  test_llm_client.py  test_prompt.py
tests/telemetry/: test_acc_parser.py  test_acc_reader.py  test_connection.py  test_ibt_reader.py  test_parser.py  test_storage.py
tests/track/: test_centerline.py  test_detector.py
tests/tts/: test_commentary.py  test_engine.py
tests/web/: conftest.py  test_analyze_api.py  test_health.py  test_laps_api.py  test_progress_page.py  test_report_page.py  test_service.py  test_storage_analyses.py
