[project]
name = "racing-coach"
version = "0.1.0"
description = "AI-powered racing coach for iRacing — analyzes telemetry data and provides driving feedback"
readme = "README.md"
authors = [
    { name = "DaoDreamer", email = "sysdreamerjd@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-benchmark>=5.0",
    "ruff>=0.11",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["racing_coach"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["racing_coach"]
